--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>测试</title>
 	</head>
 	<body>
-		<img src="localhost:7001/storage/album/200/01.png"/>
+		<img src="http://localhost:7001/storage/album/200/01.png"/>
 	</body>
 </html>
