--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="version" content ="?v=0.01">
-        <base href="/index.html">
+        <base href="/factory/">
         <title>dmstyle</title>
-		<link href="/public/common/favicon-32x32.ico" rel="shortcut icon" type="image/x-icon"/>
-        <link href="/public/common/favicon-32x32.ico" rel="icon"/>
+		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+        <link href="favicon.ico" rel="icon"/>
         <style type="text/css">
             *{padding: 0; margin: 0; font-size: 12px;}
             html{zoom:1;}
             html,body,#app{width: 100%; height: 100%; overflow: hidden;}
             /* loading样式不能放在#app-content，这样会导致在部分没有完全覆盖的页面上一直显示loading */
-            [v-cloak]{display:none; background-image:url( '/public/common/loading.svg'); background-position: center; background-repeat: no-repeat;}
+            [v-cloak]{display:none; background-image:url( 'common/loading.svg'); background-position: center; background-repeat: no-repeat;}
             #app{display: flex; flex-direction: column;}
             #app-header{padding:0 10px; height: 29px; min-height:29px; overflow: hidden; background-color: #363636; color: #999; display: flex;}
             #app-header .userinfo-container{width: 200px; line-height: 29px; color: #ff7300; text-align:right;}
@@ -26,7 +26,7 @@
             #app-header .menu-container li:hover a{color: black;}
             #app-content{flex-grow: 1; overflow: hidden;}
         </style>
-        <link rel="stylesheet" href="/public/common/index.css?v=0.01"/>
+        <link rel="stylesheet" href="common/index.css?v=0.01"/>
 	</head>
 	<body>
         <div id="app" v-cloak>
