为适应github pages调整文件结构

--- a/rendering/album.html
+++ b/rendering/album.html
@@ -15,7 +15,7 @@
             html{zoom:1;}
             html,body,#app{width: 100%; height: 100%; overflow: hidden;}
             /* loading样式不能放在#app-content，这样会导致在部分没有完全覆盖的页面上一直显示loading */
-            [v-cloak]{display:none; background-image:url( '/public/common/loading.svg'); background-position: center; background-repeat: no-repeat;}
+            [v-cloak]{display:none; background-image:url( 'common/loading.svg'); background-position: center; background-repeat: no-repeat;}
             #app{display: flex; flex-direction: column;}
             #app-header{padding:0 10px; height: 29px; min-height:29px; overflow: hidden; background-color: #363636; color: #999; display: flex;}
             #app-header .userinfo-container{width: 200px; line-height: 29px; color: #ff7300; text-align:right;}
@@ -121,16 +121,6 @@
                                 <li class="design-item" style="position:relative;" v-if="!image.hidden">
                                     <div class="button-remove"><i class="el-icon-close" @click="handleImageRemove(index)"></i></div>
                                     <p class="design-image-wrapper"><img :src="image.url" /></p>
-                                    <p class="design-name">
-                                        <span contenteditable="true" class="editable-text">${image.name}</span>
-                                        <span v-show="options.quantityShow">-</span>
-                                        <span v-show="options.quantityShow" contenteditable="true" class="editable-text">${image.quantity}</span>
-                                        <span class="unit-name" contenteditable="true" v-show="options.quantityShow">${options.unitName}</span>
-                                    </p>
-                                </li>
-                                <li class="design-item" style="position:relative;" v-if="!image.hidden">
-                                    <div class="button-remove"><i class="el-icon-close" @click="handleImageRemove(index)"></i></div>
-                                    <p class="design-image-wrapper"><img crossorigin="anonymous" src="http://localhost:7001/storage/album/200/01.png" /></p>
                                     <p class="design-name">
                                         <span contenteditable="true" class="editable-text">${image.name}</span>
                                         <span v-show="options.quantityShow">-</span>
